--- a/HotelAdmin/src/Vistas/Jframe/ServiciosRecepcionista.form
+++ b/HotelAdmin/src/Vistas/Jframe/ServiciosRecepcionista.form
@@ -63,6 +63,9 @@
           <Border info="null"/>
         </Property>
         <Property name="contentAreaFilled" type="boolean" value="false"/>
+        <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+          <Color id="Cursor de Mano"/>
+        </Property>
         <Property name="selected" type="boolean" value="true"/>
         <Property name="selectedIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/Imagenes/botonAregarServicio.png"/>
