--- a/HotelAdmin/src/Vistas/Jpanel/RegistrarSalidaGUI.form
+++ b/HotelAdmin/src/Vistas/Jpanel/RegistrarSalidaGUI.form
@@ -29,14 +29,21 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="bf" green="bf" red="bf" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Buscar reserva por ID de cliente"/>
+        <Property name="text" type="java.lang.String" value="Buscar hospedaje por ID de cliente"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="null"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTbuscadorFocusGained"/>
+        <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTbuscadorFocusLost"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTbuscadorActionPerformed"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTbuscadorKeyPressed"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTbuscadorKeyTyped"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="118" y="47" width="-1" height="-1"/>
+          <AbsoluteConstraints x="118" y="47" width="230" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -48,11 +55,11 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="70" green="70" red="70" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="123456789"/>
+        <Property name="text" type="java.lang.String" value="  "/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="546" y="153" width="-1" height="-1"/>
+          <AbsoluteConstraints x="540" y="150" width="80" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -64,11 +71,11 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="70" green="70" red="70" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="123456789"/>
+        <Property name="text" type="java.lang.String" value="  "/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="546" y="178" width="-1" height="-1"/>
+          <AbsoluteConstraints x="540" y="180" width="80" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -80,11 +87,11 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="70" green="70" red="70" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="123456789"/>
+        <Property name="text" type="java.lang.String" value="  "/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="546" y="203" width="-1" height="-1"/>
+          <AbsoluteConstraints x="540" y="200" width="80" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -96,11 +103,11 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="70" green="70" red="70" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="123456789"/>
+        <Property name="text" type="java.lang.String" value="  "/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="546" y="227" width="-1" height="-1"/>
+          <AbsoluteConstraints x="540" y="230" width="80" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -112,11 +119,11 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="70" green="70" red="70" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="123456789"/>
+        <Property name="text" type="java.lang.String" value="  "/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="546" y="250" width="-1" height="-1"/>
+          <AbsoluteConstraints x="540" y="250" width="80" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -128,11 +135,11 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="70" green="70" red="70" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="600.000"/>
+        <Property name="text" type="java.lang.String" value="  "/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="369" y="315" width="-1" height="-1"/>
+          <AbsoluteConstraints x="360" y="310" width="260" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -176,7 +183,7 @@
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="370" y="373" width="260" height="45"/>
+          <AbsoluteConstraints x="360" y="370" width="260" height="45"/>
         </Constraint>
       </Constraints>
 
@@ -202,7 +209,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="296" y="88" width="-1" height="-1"/>
+          <AbsoluteConstraints x="290" y="90" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
